design changes and improvements

--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "@clerk/clerk-react": "^5.33.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-lottie": "^1.2.10",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.3",
     "tailwindcss": "^4.1.11"
