--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-lottie": "^1.2.10",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.3",
